## Process this file with automake to get Makefile.in

AUTOMAKE_OPTIONS = gnu

SUBDIRS =  m4 lib src doc po

ACLOCAL_AMFLAGS = -I m4 

EXTRA_DIST = config.rpath mkinstalldirs depcomp

CVS_CREATED = ABOUT-NLS configure aclocal.m4 config.h.in config.guess \
 config.sub install-sh missing mkinstalldirs \
 stamp-h.in m4/Makefile.am ChangeLog po/Makefile.in.in \
 po/vpe.pot po/*.sed po/*.header po/*.sin po/Rules-quot \
 src/.libs intl depcomp

