## Produce this file with automake to get Makefile.in

if ROHC

noinst_LIBRARIES = librohc.a

librohc_a_SOURCES = \
   c_util.c comp.c \
   c_ip.c c_udp.c c_udp_lite.c c_uncompressed.c \
   d_util.c decomp.c \
   d_ip.c d_udp.c d_udp_lite.c d_uncompressed.c \
   feedback.c

noinst_HEADERS = \
   rohc.h \
   c_util.h comp.h \
   d_ip.h d_udp.h d_udp_lite.h d_uncompressed.h \
   d_util.h decomp.h \
   feedback.h

endif


